adding cam movement

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+
+    <div class="back">
+        back
+    </div>
+    <div class="arrows">
+        <p class="previous">
+            prev</p>
+        <p class="next">
+            next</p>
+    </div>
 </body>
 
 </html>
