--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,20 @@
 
 <body>
 
-    <div class="back">
-        back
+    <div class='enterScreen'>
+        <p>Welcome to:</p>
+        <h1>The Rocket Museum</h1>
+        <div class="enterAction">
+            <button></button>
+        </div>
+    </div>
+    <img src="./assets/spaceXLogo.png" class="logo">
+    <div class="back on">
+        <img src="./assets/arrows/arrow.svg">
     </div>
     <div class="arrows">
-        <p class="previous">
-            prev</p>
-        <p class="next">
-            next</p>
-    </div>
+        <img src="assets/arrows/arrowLeft.svg" class="previous on">
+        <img src="assets/arrows/arrowRight.svg" class="next on">
 </body>
 
 </html>
