--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">l
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Webpack - starter</title>
@@ -18,13 +18,13 @@
             <button></button>
         </div>
     </div>
-    <img src="./assets/spaceXLogo.png" class="logo">
+    <img src="./src/assets/spaceXLogo.png" class="logo">
     <div class="back on">
-        <img src="./assets/arrows/arrow.svg">
+        <img src="./src/assets/arrows/arrow.svg">
     </div>
     <div class="arrows">
-        <img src="assets/arrows/arrowLeft.svg" class="previous on">
-        <img src="assets/arrows/arrowRight.svg" class="next on">
+        <img src="./src/assets/arrows/arrowLeft.svg" class="previous on">
+        <img src="./src/assets/arrows/arrowRight.svg" class="next on">
 </body>
 
 </html>
