adding top text

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">l
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Webpack - starter</title>
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
     <div class='enterScreen'>
         <p>Welcome to:</p>
         <h1>The Rocket Museum</h1>
